example/secondfile/objects/Blocked_Word_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Blocked_Word_Record__c</fullName>
        <label>Blocked Word Record</label>
        <referenceTo>Blocked_Word__c</referenceTo>
        <relationshipLabel>Blocked Word Audits</relationshipLabel>
        <relationshipName>Blocked_Word_Audits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Blocked_Word__c</fullName>
        <formula>Blocked_Word_Record__r.Blocked_Word__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blocked Word</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Use__c</fullName>
        <label>Date of Use</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Text__c</fullName>
        <label>Original Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Type__c</fullName>
        <label>Post Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Answer</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Chatter Post</fullName>
                </value>
                <value>
                    <fullName>Chatter Comment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Posting__c</fullName>
        <inlineHelpText>Link to posting which contains Blocked word, if successful</inlineHelpText>
        <label>Posting</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Related_Record__c</fullName>
        <inlineHelpText>If applicable, the record to which the user responded, including the blocked word</inlineHelpText>
        <label>Related Record</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Blocked Word Audits</relationshipLabel>
        <relationshipName>Blocked_Word_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Blocked_Word_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Blocked Word Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Blocked_Word__c</columns>
        <columns>Date_of_Use__c</columns>
        <columns>Post_Type__c</columns>
        <columns>User_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BWA-{0000}</displayFormat>
        <label>Blocked Word Audit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blocked Word Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>